--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 body {
   font-family: 'Arimo', sans-serif;
-  background-image: url('./images/background.png');
+  background-image: url('./images/background-3.png');
   background-size: cover;
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+body::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
 }
 
 * {
