--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -1,19 +1,19 @@
-.text-container {
+.container {
   position: absolute;
   left: 10vw;
-  top: 15vh;
-  width: 36vw;
+  top: 70vh;
+  width: 50vw;
 }
 
-.text-container-home {
-  width: 45vw;
+.header__title {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 60vh;
 }
 
-.logo {
-  position: absolute;
-  top: 66vh;
-  left: 20vw;
-  width: 18vw;
+.header__subtitle {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 @media only screen and (max-width:600px) {
