--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -1,8 +1,30 @@
 .container {
-  position: absolute;
-  left: 10vw;
-  top: 70vh;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  left: 0;
+}
+
+.page-container {
+  margin: 40px auto auto 10vw;
   width: 50vw;
+}
+
+/* .logo {
+  position: absolute;
+  top: 66vh;
+  left: 20vw;
+  width: 20vw;
+  cursor: pointer;
+} */
+
+.logo {
+  margin: 10vh 0 auto 10vw;
+  width: 30vw;
+}
+
+.mt-5 {
+  margin-top: 100px;
 }
 
 .header__title {
