--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -6,36 +6,62 @@
 }
 
 .page-container {
-  margin: 40px auto auto 10vw;
+  margin: 15vh auto auto 15vw;
   width: 50vw;
 }
 
-/* .logo {
-  position: absolute;
-  top: 66vh;
-  left: 20vw;
-  width: 20vw;
-  cursor: pointer;
-} */
-
 .logo {
-  margin: 10vh 0 auto 10vw;
-  width: 30vw;
+  position: absolute;
+  bottom: 5vh;
+  left: 5vw;
+  width: 33vw;
 }
 
-.mt-5 {
-  margin-top: 100px;
+.page-button {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  width: 100px;
+  height: 30px;
 }
 
-.header__title {
-  font-size: 36px;
+.page-button-long {
+  width: 150px;
+}
+
+.page-button-prev {
+  right: 120px;
+}
+
+.page-button__element {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.page-button__image {
+  object-fit: cover;
+  opacity: 0.5;
+  visibility: hidden;
+}
+
+.page-button__text {
+  text-align: center;
+  line-height: 30px;
+  text-transform: uppercase;
+  cursor: pointer;
   font-weight: bold;
-  margin-bottom: 60vh;
+  font-style: italic;
 }
 
-.header__subtitle {
-  font-size: 20px;
-  font-weight: bold;
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 @media only screen and (max-width:600px) {
