--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -33,6 +33,14 @@
   margin-left: 40px;
 }
 
+.bold {
+  font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
+}
+
 @media only screen and (max-width:600px) {
   .text__body {
     font-size: 16px;
