--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -24,6 +24,14 @@
   font-style: italic;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
 @media only screen and (max-width:600px) {
   .text__body {
     font-size: 16px;
