--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -32,6 +32,11 @@
   cursor: pointer;
 }
 
+.link {
+  color: black;
+  text-decoration: underline;
+}
+
 @media only screen and (max-width:600px) {
   .text__body {
     font-size: 16px;
