--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Arimo', sans-serif;
-  background-image: url('./images/background-3.png');
+  background-image: url('./images/background.png');
   background-size: 100vw;
   overflow-y: scroll;
   scrollbar-width: none; /* Firefox */
