--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -21,7 +21,7 @@
 .page-button {
   position: fixed;
   right: 50px;
-  bottom: 50px;
+  bottom: calc(5vh + 1vw);
   width: 100px;
   height: 30px;
   z-index: 100;
@@ -52,7 +52,11 @@
   line-height: 30px;
   text-transform: uppercase;
   cursor: pointer;
-  font-weight: bold;
+  font-size: 16px;
+  /* font-weight: bold; */
+  /* font-style: italic; */
+  font-family: 'minion-pro', serif;
+  font-weight: 700;
   font-style: italic;
 }
 
