--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -4,12 +4,14 @@
   opacity: 0.75;
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 40px;
+  line-height: 24px;
 }
 
 .text__header {
   font-weight: bold;
   font-size: 32px;
   color: black;
+  margin-bottom: 12px;
 }
 
 .text__list {
