--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -43,6 +43,12 @@
   text-decoration: underline;
 }
 
+.cheatsheet {
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
 @media only screen and (max-width:600px) {
   .text__body {
     font-size: 16px;
