--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -53,6 +53,11 @@
   border-radius: 4px;
 }
 
+.image {
+  width: 75%;
+  z-index: 1;
+}
+
 @media only screen and (max-width:600px) {
   .text__body {
     font-size: 16px;
