--- a/src/components/menu/menu-web.css
+++ b/src/components/menu/menu-web.css
@@ -35,7 +35,7 @@
   opacity: 1;
   background-position: left -15px center;
   background-repeat: no-repeat;
-  background-image: url('../../images/highlight.svg');
+  background-image: url('../../images/highlight-2.svg');
 }
 
 .menu-web__item-selected-Home {
