--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -59,6 +59,10 @@
   opacity: 1;
 }
 
+.tooltip-text {
+  cursor: pointer;
+}
+
 @media only screen and (max-width:600px) {
   .text__body {
     font-size: 16px;
