--- a/src/components/texts/text.css
+++ b/src/components/texts/text.css
@@ -63,6 +63,15 @@
   cursor: pointer;
 }
 
+.checklist {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  width: 75%;
+  margin-top: 12px;
+  padding: 16px;
+  background: white;
+}
+
 @media only screen and (max-width:600px) {
   .text__body {
     font-size: 16px;
@@ -80,5 +89,9 @@
 
   .img-breakdown {
     width: 100%;
+  }
+
+  .checklist {
+    width: auto;
   }
 }
